package edu.hitsz.application;

/**
 * @author Black
 */
public class EasyGame extends Game {

    @Override
    public void increaseDifficulty(int time) {

    }
}
